--- a/.env.prod
+++ b/.env.prod
@@ -1,2 +1,3 @@
 REACT_APP_DOMAIN = "bm2.sportpassword.com"
 REACT_APP_API = "http://api.sportpassword.com"
+REACT_APP_ASSETS_DOMAIN = "http://bm.sportpassword.com"
