--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,3 @@
 REACT_APP_DOMAIN = "localhost"
 REACT_APP_API = "http://api.sportpassword.localhost"
+REACT_APP_ASSETS_DOMAIN = "http://bm.sportpassword.com"
