--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,21 +22,24 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@master
-    
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: codecov/codecov-action@v3
-      env:
-        CODECOV_TOKEN: ${{ 97ed59e9-ace7-4150-865c-6321879dc84e }}
+      
+    - name: Set up Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
         
     - name: Install dependencies 
       run: npm install
 
-    - name: Build
-      run: npm run build --if-present
-
     - name: Run the tests and generate coverage report  
       run: npm test -- --coverage
+      
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1  
 
+    - name: Build
+      run: npm run build
+    
     - name: Deploy
       run: |
         git config --global user.name ives9999
