--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://bm2.sportpassword.com",
   "name": "bm2",
   "version": "0.1.0",
   "private": true,
@@ -24,6 +25,7 @@
     "dotenv-cli": "^7.3.0",
     "env-cmd": "^10.1.0",
     "framer-motion": "^10.16.4",
+    "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
@@ -60,5 +62,7 @@
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "tailwindcss": "^3.3.3"
-  }
+  },
+  "predeplay": "npm run build",
+  "deploy": "gh-pages -d build"
 }
