--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
+    "dayjs": "^1.11.10",
     "dotenv-cli": "^7.3.0",
     "env-cmd": "^10.1.0",
     "framer-motion": "^10.16.4",
@@ -30,6 +31,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-tailwindcss-datepicker": "^1.6.6",
     "universal-cookie": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
