--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,3 +28,15 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
+
+    - name: Install SSH Key
+      uses: shimataro/ssh-key-action@v2
+      with: 
+       key: ${{ secrets.SANDBOX_SSH_PRIVATE_KEY }}
+       known_hosts: unnecessary
+       
+    - name: Adding Known Hosts
+       run: ssh-keyscan -H ${{ secrets.SANDBOX_SSH_HOST }} >> ~/.ssh/known_hosts
+
+    - name: Deploy with rsync
+      run: rsync -avz ./dist/ ${{ secrets.SANDBOX_SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/bm2/dist/
