--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,14 +29,14 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
 
-    - name: Install SSH Key
-      uses: shimataro/ssh-key-action@v2
-      with: 
-       key: ${{ secrets.SANDBOX_SSH_PRIVATE_KEY }}
-       known_hosts: unnecessary
-       
-    - name: Adding Known Hosts
-       run: ssh-keyscan -H ${{ secrets.SANDBOX_SSH_HOST }} >> ~/.ssh/known_hosts
-
-    - name: Deploy with rsync
-      run: rsync -avz ./dist/ ${{ secrets.SANDBOX_SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/bm2/dist/
+    - name: install ssh keys
+      # check this thread to understand why its needed:
+      # https://stackoverflow.com/a/70447517
+      run: |
+        install -m 600 -D /dev/null ~/.ssh/id_rsa
+        echo "${{ secrets.SANDBOX_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        ssh-keyscan -H ${{ secrets.SANDBOX_SSH_HOST }} > ~/.ssh/known_hosts
+    - name: connect and pull
+      run: ssh ${{ secrets.SANDBOX_SSH_USER }}@${{ secrets.SANDBOX_SSH_HOST }} "cd ${{ secrets.SANDBOX_WORK_DIR }} && git checkout ${{ secrets.MAIN_BRANCH }} && git pull && exit"
+    - name: cleanup
+      run: rm -rf ~/.ssh
