--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
     "@react-icons/all-files": "^4.1.0",
+    "@rpldy/upload-button": "^1.5.0",
+    "@rpldy/upload-preview": "^1.5.0",
+    "@rpldy/uploady": "^1.5.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.6",
     "@tailwindcss/typography": "^0.5.10",
