avatar upload temp

--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "env-cmd": "^10.1.0",
     "framer-motion": "^10.16.4",
     "gh-pages": "^6.0.0",
+    "rc-progress": "^3.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-tailwindcss-datepicker": "^1.6.6",
