--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dayjs": "^1.11.10",
     "dotenv-cli": "^7.3.0",
     "env-cmd": "^10.1.0",
+    "flowbite": "^2.2.0",
     "framer-motion": "^10.16.4",
     "gh-pages": "^6.0.0",
     "rc-progress": "^3.5.1",
@@ -36,6 +37,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-spinner-overlay": "^0.1.33",
     "react-tailwindcss-datepicker": "^1.6.6",
     "universal-cookie": "^6.1.1",
     "web-vitals": "^2.1.4"
