--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-scripts": "5.0.1",
     "react-spinner-overlay": "^0.1.33",
     "react-tailwindcss-datepicker": "^1.6.6",
+    "react-toastify": "^9.1.3",
     "universal-cookie": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
