--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.5.0",
     "dayjs": "^1.11.10",
     "dotenv-cli": "^7.3.0",
+    "draft-js": "^0.11.7",
     "env-cmd": "^10.1.0",
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.7.0",
@@ -30,6 +31,7 @@
     "rc-progress": "^3.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.15.0",
