--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "axios": "^1.5.0",
     "dayjs": "^1.11.10",
     "dotenv-cli": "^7.3.0",
+    "draft-convert": "^2.1.13",
     "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "env-cmd": "^10.1.0",
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.7.0",
