--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "flowbite-react": "^0.7.0",
     "framer-motion": "^10.16.4",
     "gh-pages": "^6.0.0",
+    "jwt-decode": "^4.0.0",
     "rc-progress": "^3.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
