--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,11 +5,26 @@ on:
   workflow_dispatch:
   
 jobs:
-  run_pull:
-    name: run pull
+  web-deploy:
+  name: 🎉 Deploy
     runs-on: ubuntu-latest
+  steps:
+    - name: 🚚 Get latest code
+      uses: actions/checkout@v2
+
+    - name: Use Node.js 16
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16'
+      
+    - name: 🔨 Build Project
+      run: |
+        npm install
+        npm run build
     
-    steps:
+    - name: List output files
+      run: find build/ -print
+      
     - name: Checlout code
       uses: actions/checkout@v4
     - name: install ssh keys
