--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,22 @@
 on:
   push:
     branches:
-      - master
+      - main
   workflow_dispatch:
   
 jobs:
-  web-deploy:
-  name: 🎉 Deploy
+  run_pull:
+    name: run pull
     runs-on: ubuntu-latest
-  steps:
+    
+    steps:
     - name: 🚚 Get latest code
       uses: actions/checkout@v2
 
-    - name: Use Node.js 16
+    - name: Use Node.js 14
       uses: actions/setup-node@v2
       with:
-        node-version: '16'
+        node-version: '14'
       
     - name: 🔨 Build Project
       run: |
