--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,6 @@ jobs:
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
         ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
     - name: connect and pull
-      run: rsync -avr --delete ./build/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/${{ secrets.WORK_DIR }}
+      run: rsync -avr --delete build/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/${{ secrets.WORK_DIR }}
     - name: cleanup
       run: rm -rf ~/.ssh
