--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "env-cmd": "^10.1.0",
+    "eslint-plugin-react-hooks": "^5.0.0-canary-a870b2d54-20240314",
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.7.0",
     "framer-motion": "^10.16.4",
@@ -78,5 +79,13 @@
     "tailwindcss": "^3.3.3"
   },
   "predeplay": "npm run build",
-  "deploy": "gh-pages -d build"
+  "deploy": "gh-pages -d build",
+
+  "plugins": [
+    "react-hooks"
+  ],
+  "rules": {
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
+  }
 }
