--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.3.2",
     "axios": "^1.5.0",
     "dayjs": "^1.11.10",
     "dotenv-cli": "^7.3.0",
@@ -80,7 +81,6 @@
   },
   "predeplay": "npm run build",
   "deploy": "gh-pages -d build",
-
   "plugins": [
     "react-hooks"
   ],
