--- a/.env.prod
+++ b/.env.prod
@@ -1,3 +1,3 @@
 REACT_APP_DOMAIN = "bm2.sportpassword.com"
 REACT_APP_API = "https://api.sportpassword.com"
-REACT_APP_ASSETS_DOMAIN = "https://bm.sportpassword.com"
+REACT_APP_ASSETS_DOMAIN = "https://badminton-code.com"
