--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "autoprefixer": "^10.4.16",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
+    "tailwind-lerp-colors": "^1.2.6",
     "tailwindcss": "^3.3.3"
   },
   "predeplay": "npm run build",
