--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.11.0",
     "react-image-gallery": "^1.3.0",
+    "react-image-video-gallery": "^0.8.18",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-spinner-overlay": "^0.1.33",
