--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@tinymce/tinymce-react": "^4.3.2",
+    "@tinymce/tinymce-react": "^5.1.1",
     "axios": "^1.5.0",
     "dayjs": "^1.11.10",
     "dotenv-cli": "^7.3.0",
@@ -37,6 +37,7 @@
     "jwt-decode": "^4.0.0",
     "rc-progress": "^3.5.1",
     "react": "^18.2.0",
+    "react-animated-css": "^1.2.1",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone": "^14.2.3",
